Bug 97179 - Greek alphabet in suggestions
Summary: Greek alphabet in suggestions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-01-16 12:16 UTC by Urmas
Modified: 2021-06-14 12:00 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen shot of characters suggested by spell checker (34.90 KB, image/png)
2016-01-16 13:20 UTC, Usama
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Urmas 2016-01-16 12:16:39 UTC
When a 1 or 2 letter word is misspelled, the suggestion list for it includes the 24 Greek letters. That happens for every language and very inconvenient.

Not encountered in 4.4.0.
Comment 1 Usama 2016-01-16 13:20:12 UTC
Created attachment 121988 [details]
Screen shot of characters suggested by spell checker
Comment 2 Usama 2016-01-16 13:23:28 UTC
Hello Urmas,

Thank you for reporting the bug.
I can confirm this on LO 5.1.0.1 Ubuntu 15.04

To reproduce:
1. Type "ds"
2. right click on it and you will see a long list of weired suggested characters

Screenshot is attached
Comment 3 Julien Nabet 2016-01-16 15:00:07 UTC
On pc Debian x86-64 with master sources updated yesterday I could reproduce this.
Comment 4 raal 2016-02-16 08:03:08 UTC
This seems to have begun at the below commit.
Adding Cc: to László Németh; Could you possibly take a look at this one? Thanks
 64e92af67934b7d53edb8fc7df52aaea441c193c is the first bad commit
commit 64e92af67934b7d53edb8fc7df52aaea441c193c
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Jul 9 20:30:41 2015 -0700

    source c4318b8c1912c1ee947d96b02b3d4abf2eaf65f6

    source c4318b8c1912c1ee947d96b02b3d4abf2eaf65f6

:040000 040000 203bfbcd7146e98e47dbce396cd1f958920cd4a3 833a2a6f3c3a6519c302342323d786810bc88732 M      instdir

author	László Németh <laszlo.nemeth@collabora.com>	2015-05-22 10:38:59 (GMT)
committer	László Németh <laszlo.nemeth@collabora.com>	2015-05-22 16:46:45 (GMT)
commit c4318b8c1912c1ee947d96b02b3d4abf2eaf65f6 (patch)

add Greek small letters to the technical spelling dictionary
Comment 5 László Németh 2016-02-18 17:55:12 UTC
Fixed in the gerrit: https://gerrit.libreoffice.org/#/c/22449/

Thanks for the bug report!
Comment 6 Commit Notification 2016-02-18 20:22:37 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=60d900254e93e8ac19fed3fa451b91c536efe930

tdf#97179: do not suggest 1-letter custom dictionary words

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.