tdf#97179: do not suggest 1-letter custom dictionary words

Fix for the following regression:

Suggestions for all 1- or 2-letter words contain ~all Greek
letters from the commit c4318b8c1912c1ee947d96b02b3d4abf2eaf65f6
(add Greek alphabet to the technical dictionary).

Change-Id: I9356d439debfec34a963edbe5daacde976cc532c