linguistic/source/spelldta.cxx
@@ -99,7 +99,7 @@ void SearchSimilarText( const OUString &rText, sal_Int16 nLanguage,
                     // remove characters used to determine hyphenation positions
                     aEntryTxt = comphelper::string::remove(pEntries[k]->getDictionaryWord(), '=');
                 }
-                if (!aEntryTxt.isEmpty()  &&  LevDistance( rText, aEntryTxt ) <= 2)
+                if (!aEntryTxt.isEmpty()  &&  aEntryTxt.getLength() > 1  &&  LevDistance( rText, aEntryTxt ) <= 2)
                     rDicListProps.push_back( aEntryTxt );
             }
         }
